--- a/index.html
+++ b/index.html
@@ -125,109 +125,110 @@
 
 <p>This example API documentation page was created with <a href="https://github.com/tripit/slate">Slate</a>. Feel free to edit it and use it as a base for your own API&rsquo;s documentation.</p>
 
-<h1 id="authentication">Authentication</h1>
+          <h1 id="authentication">Authentication</h1>
 
-<blockquote>
-<p>To authorize, use this code:</p>
-</blockquote>
-<pre class="highlight shell"><code><span class="c"># With shell, you can just pass the correct header with each request</span>
-curl <span class="s2">"api_endpoint_here"</span>
-  -H <span class="s2">"Authorization: meowmeowmeow"</span>
-</code></pre>
+<p>The Crowdskout API uses the OAuth 2 Authorization Code flow for authentication.</p>
 
-<blockquote>
-<p>Make sure to replace <code class="prettyprint">meowmeowmeow</code> with your API key.</p>
-</blockquote>
+<h2 id="obtaining-a-client_id-and-client_secret">Obtaining a <code class="prettyprint">client_id</code> and <code class="prettyprint">client_secret</code></h2>
 
-<p>Kittn uses API keys to allow access to the API. You can register a new Kittn API key at our <a href="http://example.com/developers">developer portal</a>.</p>
+<p>Contact your Crowdskout account manager to obtain a <code class="prettyprint">client_id</code> and <code class="prettyprint">client_secret</code>, and to provide
+them with a <code class="prettyprint">redirect_uri</code> for your application.</p>
 
-<p>Kittn expects for the API key to be included in all API requests to the server in a header that looks like the following:</p>
+<h2 id="obtaining-an-authorization-code">Obtaining an Authorization Code</h2>
 
-<p><code class="prettyprint">Authorization: meowmeowmeow</code></p>
+<p>Direct the user to the following url for login and authorization:</p>
 
-<aside class="notice">
-You must replace <code>meowmeowmeow</code> with your personal API key.
-</aside>
-
-<h1 id="profile">Profile</h1>
-
-<h3 id="http-request">HTTP Request</h3>
-
-<p><code class="prettyprint">GET http://example.com/api/kittens</code></p>
-
-<h3 id="query-parameters">Query Parameters</h3>
+<p><code class="prettyprint">https://api.crowdskout.com/oauth/authorize?client_id=abc&amp;redirect_uri=url&amp;response_type=code&amp;state=abc</code></p>
 
 <table><thead>
 <tr>
 <th>Parameter</th>
-<th>Default</th>
-<th>Description</th>
+<th>Value</th>
 </tr>
 </thead><tbody>
 <tr>
-<td>include_cats</td>
-<td>false</td>
-<td>If set to true, the result will also include cats.</td>
+<td>client_id</td>
+<td>The <code class="prettyprint">client_id</code> provided by your Crowdskout account manager</td>
 </tr>
 <tr>
-<td>available</td>
-<td>true</td>
-<td>If set to false, the result will include kittens that have already been adopted.</td>
+<td>redirect_uri</td>
+<td>Where to redirect the user after authorization; must be provided to account manager</td>
+</tr>
+<tr>
+<td>response_type</td>
+<td>Must be &ldquo;code&rdquo;</td>
+</tr>
+<tr>
+<td>state</td>
+<td><em>Optional;</em> Unique identifier to protect against CSRF</td>
 </tr>
 </tbody></table>
 
-<aside class="success">
-Remember — a happy kitten is an authenticated kitten!
-</aside>
-
-<h2 id="get-a-specific-kitten">Get a Specific Kitten</h2>
-<pre class="highlight ruby"><code><span class="nb">require</span> <span class="s1">'kittn'</span>
-
-<span class="n">api</span> <span class="o">=</span> <span class="no">Kittn</span><span class="o">::</span><span class="no">APIClient</span><span class="p">.</span><span class="nf">authorize!</span><span class="p">(</span><span class="s1">'meowmeowmeow'</span><span class="p">)</span>
-<span class="n">api</span><span class="p">.</span><span class="nf">kittens</span><span class="p">.</span><span class="nf">get</span><span class="p">(</span><span class="mi">2</span><span class="p">)</span>
-</code></pre>
-<pre class="highlight python"><code><span class="kn">import</span> <span class="nn">kittn</span>
-
-<span class="n">api</span> <span class="o">=</span> <span class="n">kittn</span><span class="o">.</span><span class="n">authorize</span><span class="p">(</span><span class="s">'meowmeowmeow'</span><span class="p">)</span>
-<span class="n">api</span><span class="o">.</span><span class="n">kittens</span><span class="o">.</span><span class="n">get</span><span class="p">(</span><span class="mi">2</span><span class="p">)</span>
-</code></pre>
-<pre class="highlight shell"><code>curl <span class="s2">"http://example.com/api/kittens/2"</span>
-  -H <span class="s2">"Authorization: meowmeowmeow"</span>
-</code></pre>
-
-<blockquote>
-<p>The above command returns JSON structured like this:</p>
-</blockquote>
-<pre class="highlight json"><code><span class="p">{</span><span class="w">
-  </span><span class="nt">"id"</span><span class="p">:</span><span class="w"> </span><span class="mi">2</span><span class="p">,</span><span class="w">
-  </span><span class="nt">"name"</span><span class="p">:</span><span class="w"> </span><span class="s2">"Max"</span><span class="p">,</span><span class="w">
-  </span><span class="nt">"breed"</span><span class="p">:</span><span class="w"> </span><span class="s2">"unknown"</span><span class="p">,</span><span class="w">
-  </span><span class="nt">"fluffiness"</span><span class="p">:</span><span class="w"> </span><span class="mi">5</span><span class="p">,</span><span class="w">
-  </span><span class="nt">"cuteness"</span><span class="p">:</span><span class="w"> </span><span class="mi">10</span><span class="w">
-</span><span class="p">}</span><span class="w">
-</span></code></pre>
-
-<p>This endpoint retrieves a specific kitten.</p>
-
-<aside class="warning">Inside HTML code blocks like this one, you can&rsquo;t use Markdown, so use <code>&lt;code&gt;</code> blocks to denote code.</aside>
-
-<h3 id="http-request">HTTP Request</h3>
-
-<p><code class="prettyprint">GET http://example.com/kittens/&lt;ID&gt;</code></p>
-
-<h3 id="url-parameters">URL Parameters</h3>
+<p>After the user logs in an authenticates with a client, they will be redirected to <code class="prettyprint">redirect_uri</code> with the following parameters:</p>
 
 <table><thead>
 <tr>
 <th>Parameter</th>
-<th>Description</th>
+<th>Value</th>
 </tr>
 </thead><tbody>
 <tr>
-<td>ID</td>
-<td>The ID of the kitten to retrieve</td>
+<td>code</td>
+<td>Authorization code</td>
+</tr>
+<tr>
+<td>state</td>
+<td>The <code class="prettyprint">state</code> passed as a parameter to the authorization url</td>
 </tr>
 </tbody></table>
+
+<h2 id="obtaining-an-access-token">Obtaining an Access Token</h2>
+
+<p>Use your authorization code to obtain an access token, by making a POST request to the following
+url:</p>
+
+<p><code class="prettyprint">https://api.crowdskout.com/oauth/access_token</code></p>
+
+<p>Include the following in the body of your request, as <strong>Content-Type: application/x-www-form-urlencoded</strong>:</p>
+
+<table><thead>
+<tr>
+<th>Parameter</th>
+<th>Value</th>
+</tr>
+</thead><tbody>
+<tr>
+<td>client_id</td>
+<td>The <code class="prettyprint">client_id</code> provided by your Crowdskout account manager</td>
+</tr>
+<tr>
+<td>client_secret</td>
+<td>The <code class="prettyprint">client_secret</code> provided by your Crowdskout account manager</td>
+</tr>
+<tr>
+<td>code</td>
+<td>The obtained authorization code</td>
+</tr>
+<tr>
+<td>redirect_uri</td>
+<td>Same <code class="prettyprint">redirect_uri</code></td>
+</tr>
+<tr>
+<td>grant_type</td>
+<td>Must be &ldquo;authorization_code&rdquo;</td>
+</tr>
+</tbody></table>
+
+<p>Crowdskout will respond with an <code class="prettyprint">access_token</code>.</p>
+
+<h2 id="using-the-api">Using the API</h2>
+
+<p>With an <code class="prettyprint">access_token</code>, you can access the Crowdskout API.</p>
+
+<p><code class="prettyprint">https://api.crowdskout.com/v1/api-endpoint</code></p>
+
+<p>Include the header <strong>Authorization: Bearer <em>token</em></strong> in every request, where <em>token</em> is your obtained
+<code class="prettyprint">access_token</code>.</p>
 
           <h1 id="the-profile-object">The Profile Object</h1>
 
